discussion/kv_engine/175151/175151_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51916: Add support for refuse data ingress from clients

Add support for the data plane to tell a bucket that it should
not accept data ingress from a client into a bucket. Once
enabled a client may only retrieve (and delete) documents.

Note that this does _NOT_ affect DCP as we don't want to
end up in a situation where we can't store the requested
amount of replicas.

Change-Id: Ib4de82fde4cea46292c8fc01d56ca9ebe952aff1

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-05-23 09:14:18.000000000
Message: 
Patch Set 4: Patch Set 3 was rebased
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-05-23 09:23:31.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46302/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/46302/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38907/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38907/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27817/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27817/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18620/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/18620/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7256/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/7256/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19416/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/19416/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19768/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19768/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7357/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/7357/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20434/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/20434/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17645/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:18:5: error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members" [clang-diagnostic-error]
    static_assert(sizeof(Bucket) == 6256,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17645/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/buckets_test.cc:18:5:
error: static_assert failed due to requirement "sizeof(Bucket) == 6256" "Bucket size changed, the reset test must be updated with the new members" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/17645/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/16670/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-06-01 10:11:51.000000000
Message: 
Patch Set 4:

No Builds Executed
----------------------------------------------------------------------------------------------------------------------
